feat: add Insurance entity, controller, and service for insurance management; update build configuration and Dockerfile

--- a/build.gradle
+++ b/build.gradle
@@ -36,3 +36,8 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
+tasks.bootJar
+		{
+			archiveFileName = "rental-gateway-service.jar"
+		}
